fix horizontal misalignment

--- a/app/style/MiscComponents.less
+++ b/app/style/MiscComponents.less
@@ -391,7 +391,7 @@
 
 .rescan-button-area {
   padding-top: 2px;
-  padding-right: 10px;
+  padding-right: 5px;
   float: left;
 }
 
@@ -430,7 +430,7 @@
 }
 
 .rescan-cancel-button-area {
-  margin-left:auto;
+  margin: 0 -12px 0 auto;
 }
 
 .gettickets-cancel-button,
