--- a/app/style/SideBar.less
+++ b/app/style/SideBar.less
@@ -149,7 +149,7 @@
 
 .sidebar-menu-bottom-latest-block {
   position: relative;
-  padding: 14px 18px 10px 20px;
+  padding: 16px 16px 16px 20px;
   background-color: var(--info-modal-button-text);
   font-size: 13px;
 }
